--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     </head>
     <body>
     <div class="container">
-        <h1>People entered:</h1>
+        <h1>Rows Crocheted:</h1>
         <h2 id="count-el">0</h2>
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
         <button id="save-btn" onclick="save()">SAVE</button>
-        <p id="save-el">Previous entries: </p>
+        <p id="save-el">Previous Rows: </p>
     </div>
         <script src="index.js">
-            nnerText
         </script>
     </body>
 </html>
